- add back ipw3945 module in wireless modules list
- allow to detect VirtualBox guest systems

Version 10.4.217 - 27 September 2007, by Thierry Vignaud

- localedrake: 
  o allow to choose countries like "Angola" which have no locale (en_AO) in
    the "best" countries (alas it won't be remembered, will only be used in
    kde settings for now)
- finish-install:
  o display nicer HTML release notes rather than raw text version

Version 10.4.213 - 26 September 2007, by Thierry Vignaud

- drakbug
  o don't report a non existant crash when run w/o --error
  o when unable to access X11, just print the backtrace on the console
- draksec:
  o add a right delegation tab
  o display arrows for tabs

Version 10.4.210 - 24 September 2007, by Thierry Vignaud

- diskdrake
  o fix "Add to LVM"
- drakclock:
  o fix race on ugtk2->exit that causes a crash (#33894)
- drakfont:
  o handle fontpath.d
  o size font directory list dialog

Version 10.4.209 - 22 September 2007, by Olivier "blino" Blin

- make formatXiB() handle negative numbers (for rpmdrake)
- service_harddrake:
  o auto-configure CD-Rom drives in fstab again (even if it prevents
    KDE media manager from unmounting them), to be consistent with
    install which actually configures CD-Rom drives in fstab

Version 10.4.208 - 21 September 2007, by Olivier "blino" Blin

- service_harddrake:
  o do not auto-configure CD-Rom drives in fstab, it fordbids
    umounting with hal (install does not configure them in fstab either)
  o automatically configure harddisks
- finish-install:
  o write autologin settings after user creation only
    (so that home is set and exists, should partly fix GNOME autologin)
  o config first user to autologin if USER_AUTOLOGIN_FIRST is "yes"
  o read gdm autologin settings
- drakupdate_fstab: allow to configure harddisks

Version 10.4.207 - 21 September 2007, by Thierry Vignaud

- drakboot:
  o create .dmrc with mode 0644 for gdm (#33774)
- harddrake: