@@ -1,3 +1,6 @@
+- add acpi-cpufreq support for some Intel CPUs (family 6 model 15)
+  (from Herton Ronaldo Krzesinski, #30208)
+
 Version 10.4.220 - 28 September 2007, by Pascal "Pixel" Rigaux
 
 - log_sizes: cleanup __db* files
