@@ -1,5 +1,7 @@
 - add back ipw3945 module in wireless modules list
 - allow to detect VirtualBox guest systems
+- add acpi-cpufreq support for some Intel CPUs (family 6 model 15)
+  (from Herton Ronaldo Krzesinski, #30208)
 
 Version 10.4.217 - 27 September 2007, by Thierry Vignaud
 
